# scripts-manager

./: .env.example  .gitignore  LOGIC  README.md  TODO  main.py  pyproject.toml  requirements.txt
.cursor/rules/: clean-code.mdc  documentation.mdc  error-handling.mdc  fastapi.mdc  security-best-practices.mdc
deactivate/Scripts/: activate  activate.bat
examples/: execute_script_example.py
frontend/: .gitignore  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Login.tsx  Onboarding.tsx  Register.tsx  ScriptViewer.tsx  ScriptsTree.tsx
frontend/src/components/modals/: CodeExampleModal.tsx  CreateFolderModal.tsx  CreateScriptModal.tsx  EditFolderModal.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/types/: api.ts
scripts/: script.py  script_1.py  test.py  test_args_in_request_args_in_response.py  test_file_in_request_file_in_response.py
scripts/test/: test_args_in_request_args_in_response.py  test_args_in_request_file_in_response.py  test_file_in_request_file_in_response.py
src/: app.py  config.py  database.py  logger.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
src/file_storage/: __init__.py  client.py  router.py  schemas.py
src/script_executor/: router.py  schemas.py  service.py
src/scripts_manager/: API_DOCUMENTATION.md  error_codes.py  error_handler.py  exceptions.py  models.py  router.py  schemas.py  service.py  validators.py
