[project]
name = "scripts-manager"
version = "0.1.0"
description = "Scripts Manager - REST API for executing Python scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "structlog>=25.5.0",
    "sqlalchemy>=2.0.46",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-dateutil>=2.8.2",
]
